# simple-data-pipeline

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
data/source/: addresses.json  patients.json  patients_cave.json
src/app/: convert_to_target.py  import_to_raw.py  run_pipeline.py
