[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "A skeleton Python CLI application."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pyarrow",
    "duckdb>=0.10.2",
    "click>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0"
]

[project.scripts]
app = "app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150
